wp-content/themes/gowatch-child/style.css
/* ... */
/*form elements*/
.bst4-wrapper .form-check-input {
    margin-left: 0;
    margin-right: 0.2em;
}
.bst4-wrapper .btn.btn-light {
    border-radius: 15px;
    padding-left: 1.05em;
    padding-right: 1.05em;
    padding: .36em 1.05em;
}

.bst4-wrapper input[type="number"],
.bst4-wrapper input[type="email"],
.bst4-wrapper input[type="email"],
.bst4-wrapper input[type="text"] {
    border-radius: 15px;
    border: 1px solid #dedede;
    padding: 4px 8px;
}
.bst4-wrapper input[type="number"]:focus,
.bst4-wrapper input[type="email"]:focus,
.bst4-wrapper input[type="email"]:focus,
.bst4-wrapper input[type="text"]:focus {
    outline: 0;
    box-shadow: 0 0 0 2px rgba(55,105,150,0.15);
    border-color: rgba(55,105,150,0.4);
}
.bst4-wrapper .form-check {
    padding-left: 2em;
}
.bst4-wrapper .form-check {
    margin: 0.5rem 0 0.5rem 0;
}
.bst4-wrapper .btn-light:not(:disabled):not(.disabled):active,
.bst4-wrapper .btn-light:not(:disabled):not(.disabled).active,
.show > .bst4-wrapper .btn-light.dropdown-toggle {
    background-color: rgba(55,105,150,1) !important;
    border-color: rgba(55,105,150,1) !important;
    color: #fff !important;
}

.bst4-wrapper .content-wrapper .btn-light {
    border: 1px solid #ccc !important;
    margin: 5px 5px 5px 0;
    font-size: 13px;
}
.bst4-wrapper .content-wrapper .desc + button.btn.btn-light {
    top: -1em !important;
    position: relative;
}
.bst4-wrapper .text-input-group label {
    width: 7rem;
    margin-bottom: 0;
}

.bst4-wrapper .input-group {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    align-items: center !important;
}

.bst4-wrapper .form-check-input {
    margin-top: 0.1rem;
    margin-left: -1.5rem !important;
}
#side-menu-bar-wrapper .bst4-wrapper .content-wrapper .btn-light:hover {
    border-color: rgba(55,105,150,1) !important;
    color: rgba(55,105,150,1);
    background: #FFF !important;
}

@media screen and (max-width: 767px) {
    #side-menu-bar-wrapper {
        display: none;
    }
    .video-figure-content {
        padding-right: 0;
    }
}

.upload-notification {
    display: flex;
    flex-direction: column;
    font-size: 20px;
    justify-content: center;
    text-align: center;
    min-height: 30vh;
}
.upload-notification i {
    font-size: 80px;
    line-height: 80px;
    margin-bottom: 20px;
    color: rgba(9,49,84,1);
    align-self: center;
}
.upload-notification button {
    height: 40px;
    line-height: 40px;
    padding: 0 20px;
    color: #FFF;
    background-color: rgba(9,49,84,1);
    border: 0 none;
    max-width: 180px;
    align-self: center;
    margin-top: 20px;
}


.single .post-meta .entry-meta-author {
    display: flex;
    align-items: center;
}
.single .post-meta .entry-meta-author .entry-meta-date a::after {
    display: none;
}
.single .post-meta .entry-meta-author > a[rel="author"] {
    display: inline;
}
.single.single-video .post-meta {
    display: flex;
    align-items: center;
    padding: 18px 0;
}
.single.single-video .post-meta .entry-meta-author a {
    margin: 0;
}
.single.single-video .post-meta .author_name {
    margin-left: 8px;
}
.single.single-video .post-meta .entry-meta-author {
    margin-bottom: 0;
}
.single-video .post-meta .post-meta-actions {
    transform: translate(0);
    float: none;
    margin-left: auto;
}
.tooltip-sharing .airkit_sharing .btn-share span.btn-icon-wrap {
    width: 38px;
    height: 38px;
    line-height: 36px;
}
.tooltip-sharing .airkit_sharing .popover-content-footer {
    display: none;
}
.single-video .post-content {
    padding-left: 0;
    margin-bottom: 0;
    padding-bottom: 0;
}
.gw3-button {
    height: 40px;
    line-height: 40px;
    display: inline-flex;
    padding: 0 18px;
    border-radius: 25px;
    background: rgba(55,105,150,1);
    color: #FFF;
    text-transform: uppercase;
    font-size: 12px;
    font-weight: 500;
}
.gw3-button:hover {
    background: rgba(9,49,84,1);
    color: #FFF;
}
.gw3-button.outline {
    background: transparent;
    border: 1px solid rgba(55,105,150,1);
    line-height: 38px;
    color: rgba(55,105,150,1);
}
.gw3-button.outline:hover {
    background: rgba(55,105,150,1);
    color: #FFF;
}
.single .single-post-tags h5 {
    border: 0 none;
    padding: 0 5px 0 0;
    font-style: normal;
    font-size: 14px;
}
.single-video .tags-container a[rel="tag"] {
    border: 0 none;
    height: auto;
    padding: 0;
    background: transparent;
    text-transform: none;
    font-size: inherit;
    font-weight: normal;
    color: inherit;
    font-size: 14px;
    letter-spacing: 0;
}
.single-video .tags-container a[rel="tag"]::before {
    content: '#';
}

.single.single-video .post-content p:last-of-type {
    margin-bottom: 0;
}
.single.single-video .post-header {
    margin-bottom: 14px;
}
.single.single-video .post-meta .post-meta-author {
    width: 60%;
}
.asset-action-buttons {
    margin-top: 14px;
}
.embed-content {
    display: none;
}
.embed-content h4 {
    font-size: 15px;
    text-transform: uppercase;
    margin: 15px 0 5px 0;
    font-weight: 600;
    opacity: 0.7;
}
.embed-content textarea {
    border: 1px solid #f3f3f3;
    border-radius: 10px;
    padding: 10px;
    width: 100%;
    height: 60px;
}
.single-video .post-event-links {
    margin-top: 15px;
}
.single.single-video .single-post-tags ul {
    margin-bottom: 0;
}

.ts-pricing-view article .read-more,
.ts-pricing-view .featured .read-more:hover {
    border-color: rgba(55,105,150,1) !important;
    color: rgba(55,105,150,1) !important;
    background: transparent !important;
}

.ts-pricing-view article .read-more:hover,
.ts-pricing-view .featured .read-more {
    border-color: transparent !important;
    color: #FFF !important;
    background: rgba(55,105,150,1) !important;
}
/* ... */

